fixed contrast error

--- a/css/nav-menu.css
+++ b/css/nav-menu.css
@@ -2,7 +2,7 @@
 
 /* Use your dark maroon for the nav background */
 .topnav {
-  background-color: #5A1F5A; /* Dark maroon */
+  background-color: #6e0c6eb9; /* light purple */
   overflow: hidden;
 }
 
